--- a/presentationPage/index.html
+++ b/presentationPage/index.html
@@ -62,8 +62,8 @@
               <h1 class="mb-5">The advances in technology have distanced people from eachother, but can they bring us back together?
                 The answer is YES!
               </h1>
-              <a href="#" class="btn btn-outline btn-xl js-scroll-trigger">Find service</a>
-              <a href="#" class="btn btn-outline btn-xl js-scroll-trigger">Offer service</a>
+              <a href="/app" class="btn btn-outline btn-xl js-scroll-trigger">Get started</a>
+              <!-- <a href="#" class="btn btn-outline btn-xl js-scroll-trigger">Offer service</a> -->
             </div>
           </div>
           <div class="col-lg-5 my-auto">
