--- a/presentationPage/index.html
+++ b/presentationPage/index.html
@@ -111,9 +111,9 @@
           <hr>
         </div>
         <div class="row">
-          <div class="col-lg-4 my-auto">
-            <div class="device-container">
-              <div class="device-mockup iphone6_plus portrait white">
+          <div class="col-lg-12 my-auto">
+            <div class="device-container" style="max-width: 100% !important;">
+              <div class="device-mockup macbook white">
                 <div class="device">
                   <div class="screen">
                     <img src="img/loginScreen.png" class="img-fluid" alt="">
@@ -122,7 +122,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-8 my-auto">
+          <div class="col-lg-12 my-auto">
             <div class="container-fluid">
               <div class="row">
                 <div class="col-lg-6">
